z-index fixes

--- a/css/pr_fixes.css
+++ b/css/pr_fixes.css
@@ -18,7 +18,7 @@
 .body-with-sidebar .form-field,
 .body-with-sidebar .form-field .input-wrapper,
 .body-with-sidebar .form-field .input-wrapper .loader{
-    z-index: 12;
+    z-index: 12 !important;
 }
 
 .ProfileMenu{
